# saorsa-robotics

./: Cargo.toml
apps/brain-daemon/: Cargo.toml
apps/kyutai-stt-app/: Cargo.toml
apps/safety-demo/: Cargo.toml
apps/sr-cli/: Cargo.toml
apps/vla-policy-demo/: Cargo.toml
apps/voice-demo/: Cargo.toml
crates/can-transport/: Cargo.toml
crates/continual-learning/: Cargo.toml
crates/device-registry/: Cargo.toml
crates/intent-parser/: Cargo.toml
crates/safety-guard/: Cargo.toml
crates/vision-stereo/: Cargo.toml
crates/vla-policy/: Cargo.toml
crates/voice-local/: Cargo.toml
workspace-hack/: Cargo.toml
