[workspace]
members = [
    "crates/can-transport",
    "crates/device-registry",
    "crates/vision-stereo",
    "crates/voice-local",
    "crates/vla-policy",
    "crates/safety-guard",
    "crates/continual-learning",
    "crates/intent-parser",
    "apps/sr-cli",
    "apps/brain-daemon",
    "apps/kyutai-stt-app",
    "apps/vla-policy-demo",
    "apps/safety-demo",
    "apps/voice-demo",
    "workspace-hack",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Saorsa Robotics <dev@saorsa.ai>"]
rust-version = "1.77"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "warn"
unimplemented = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
