[package]
name = "safety-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1.0", features = ["full"] }
safety-guard = { path = "../../crates/safety-guard", features = ["watchdogs"] }
vla-policy = { path = "../../crates/vla-policy", default-features = false }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
