[package]
name = "sr-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
voice-audio = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
can-transport = { path = "../../crates/can-transport", features = ["slcan", "mock"] }
time.workspace = true
serde.workspace = true
serde_json.workspace = true
device-registry = { path = "../../crates/device-registry" }
vision-stereo = { path = "../../crates/vision-stereo" }
voice-local = { path = "../../crates/voice-local" }
vla-policy = { path = "../../crates/vla-policy" }
continual-learning = { path = "../../crates/continual-learning" }
hound = "3.5"
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
