[package]
name = "vla-policy-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }
vla-policy = { path = "../../crates/vla-policy", features = ["mock"] }
clap = { version = "4.5", features = ["derive"] }
safety-guard = { path = "../../crates/safety-guard" }
vision-stereo = { path = "../../crates/vision-stereo", default-features = false }
device-registry = { path = "../../crates/device-registry" }
can-transport = { path = "../../crates/can-transport" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
default = ["vs-mock"]
vs-mock = ["vision-stereo/mock"]
vision-opencv = ["vision-stereo/opencv"]
apriltag = ["vision-stereo/apriltag"]
