[package]
name = "voice-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Internal crates
intent-parser = { path = "../../crates/intent-parser" }
vla-policy = { path = "../../crates/vla-policy", default-features = false, features = ["mock"] }
continual-learning = { path = "../../crates/continual-learning", default-features = false, features = ["data-collection"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
