[package]
name = "device-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_yaml = "0.9"
serde_json.workspace = true
prometheus = "0.13"
anyhow.workspace = true
time.workspace = true
schemars = { version = "0.8", features = ["derive"], optional = true }
can-transport = { path = "../can-transport" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
schema = ["dep:schemars"]
