[package]
name = "vision-stereo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = ["mock"]
mock = []
opencv = ["dep:opencv"]
apriltag = ["dep:apriltag"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
opencv = { version = "0.92", optional = true }
apriltag = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
